# pyfuture

./: .gitignore  .pre-commit-config.yaml  README.md  pdm_build.py  pyproject.toml
.github/: codecov.yml
.github/workflows/: build.yml  codestyle-check.yml  codestyle.yml  coverage.yml  publish.yml  python-publish.yml
docs/: pep695.md
examples/: pep695.py
examples/libcst/: pep622.py  pep695.py
examples/pep622/: ex_match.py
examples/pep695/: ex_def.py  ex_type.py
pyfuture/: __init__.py  __main__.py  utils.py
pyfuture/codemod/: __init__.py  transform_match.py  transform_type_parameters.py  utils.py
pyfuture/codemod/pep604/: __init__.py  union_types.py
pyfuture/codemod/pep622/: __init__.py  match.py
pyfuture/codemod/pep695/: __init__.py  type_parameters.py
pyfuture/codemod/pep701/: __init__.py  fstring.py
pyfuture/hooks/: pdm.py
pyfuture/transformer/: __init__.py  replace.py
tests/: test_cli.py  test_transformer.py
tests/codemod/: test_pep695.py
tests/legacy/codemod/: test_pep695.py
