[project]
name = "pyfuture"
dynamic = ["version"]
description = ""
authors = [
    {name = "Zhan Rongrui", email = "2742392377@qq.com"},
]
dependencies = [
    "libcst>=1.1.0",
    "typer>=0.9.0",
    "loguru>=0.7.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
watch = ["watchfiles"]
all = ["pyfuture[watch]"]

[project.urls]
Homepage = "https://pypi.org/project/pyfuture"
Repository = "https://github.com/zrr-lab/pyfuture.git"

[project.scripts]
pyfuture = "pyfuture.__main__:app"

[tool.ruff]
line-length = 120
src = ["pyfuture", "tests"]
exclude = ["tests/fixtures"]
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]

[tool.ruff.lint.isort]
known-first-party = ["pyfuture"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]

[tool.pyright]
include = ["pyfuture"]
exclude = [
    "pdm_build.py"
]

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage"
]
[tool.pdm.scripts]
cov ={ composite = ["pytest tests --cov=pyfuture --cov-context=test", "coverage html --show-contexts {args}"]}

[tool.pdm.version]
source = "scm"
write_to = "pyfuture/__version__.py"
write_template = "__version__ = '{}'"

[tool.pdm.build]
includes = ["pyfuture"]

[tool.pdm.build.hooks.pyfuture]
target = "py38"

[build-system]
requires = ["pdm-backend", "pdm-pyfuture"]
build-backend = "pdm.backend"
